# RAIVformac

./: .gitignore  INSTALL.ja.md  INSTALL.md  LICENSE  README.ja.md  README.md  RELEASE_NOTES.md  ROADMAP.md  THIRD_PARTY_NOTICES.md  pyproject.toml
demo/: ATTRIBUTION.md  README.md
docs/: hardware-compatibility.md
docs/releases/: v0.3.0-alpha.md
scripts/: audit_distribution.py  build_macos_app.py  capture_readme_screenshots.py  check_release_ready.py  fetch_realcugan.py  package_standalone.py  release_macos_app.py  setup_notary_profile.py
src/raiv_app/: __init__.py  archive_utils.py  bookshelf.py  engine_utils.py  i18n.py  library.py  main.py  page_provider.py  quality_settings.py  viewer.py
test/: test_i18n.py  test_viewer_navigation.py
