[project]
name = "raiv"
version = "0.2.0a0"
description = "macOS manga and image archive viewer for Apple Silicon"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "pillow>=10",
    "py7zr>=0.22",
    "rarfile>=4.2",
]

[project.scripts]
raiv-viewer = "raiv_app.main:main"

[project.optional-dependencies]
gui = [
    "PySide6>=6.7",
]
opencv = [
    "numpy>=1.26",
    "opencv-python-headless>=4.9",
]
dev = [
    "PySide6>=6.7",
    "numpy>=1.26",
    "opencv-python-headless>=4.9",
]
app = [
    "PyInstaller>=6.10",
    "PySide6>=6.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/raiv_app"]
